--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
         <div class="navbar-nav">
-            <a class = 'nav-link active' href="{% url 'home:home' %}">home</a>"
+            <a class = 'nav-link active' href="{% url 'home:home' %}">home</a>
+            <a class = 'nav-link active' href="{% url 'account:user_register' %}">register</a>
         </div>
     </div>
   </nav>
