--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -7,5 +7,13 @@
 {% endblock %}
 
 {% block content %}
-    <h3>hellooo user </h3>
+    {% for product in products %}
+        <div class="card" style="width: 18rem; display:inline-block;">
+            <img src="{{ product.image.url }}" class="card-img-top">
+            <div class="card-body">
+                <a href="{{ product.get_absolute_url }}" class="card-title">{{ product.name }}</a>
+            </div>
+        </div>
+            
+    {% endfor %}
 {% endblock %}
