--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,10 +1,15 @@
 <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
         <div class="navbar-nav">
-            <a class = 'nav-link active' href="{% url 'home:home' %}">home</a>
-            <a class = 'nav-link active' href="{% url 'account:user_register' %}">register</a> 
+            <a class="nav-link active" href="{% url 'home:home' %}">Home</a>
+            {% if request.user.is_authenticated %}
+            <a class="nav-link active" href="{% url 'account:user_logout' %}">Logout</a>
+            {% else %}
+            <a class="nav-link active" href="{% url 'account:user_register' %}">Register</a>
+            <a class="nav-link active" href="{% url 'account:user_login' %}">Login</a>
+            {% endif %}
             {% if request.user.is_admin %}
-            <a class = 'nav-link active' href="{% url 'home:bucket' %}">Bucket</a> 
+            <a class="nav-link active" href="{% url 'home:bucket' %}">Bucket</a>
             {% endif %}
         </div>
     </div>
